# mistral-vibe-hybrid

./: .shellcheckrc  CHANGELOG.md  CI_CD_GUIDE.md  CONTRIBUTING.md  GITIGNORE_GUIDE.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  UV_GUIDE.md  change_worker_model.sh  install.sh  mypy.ini  package.sh  pyproject.toml  setup_mistral_vibe.sh  setup_uv.sh  sign_scripts.sh  start_llm_server.sh  start_vllm.sh  test_python312.sh  toggle_hybrid_mode.sh  vibe-extended  vibe_custom_commands.py
.github/workflows/: ci-test.yml  ci.yml  release.yml
agent_templates/: hybrid_primary.md.template  hybrid_worker.md.template  single_agent.md.template
config/: setup_config.json
docs/: DISTRIBUTION_GUIDE.md  OPEN_SOURCE_SUMMARY.md  STRUCTURE.md
src/: __init__.py  load_vibe_extensions.py  vibe_custom_commands.py
tests/: pytest.ini  run_tests.sh
tests/python/: test_vibe_commands.py
